--- a/kingWeb/kingWeb/templates/adm/table_list/index.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/index.html
@@ -40,7 +40,7 @@
                 return;
             }
             lkWeb.Confirm("确认复制", function () {
-                lkWeb.AjaxPost("@Url.Action("Copy")", { id: id }, function () {
+                lkWeb.AjaxPost("/adm/tablelist/post_copy/", { id: id }, function () {
                     parent.layer.alert("复制成功");
                 lkTable.draw(false);
             })
@@ -53,7 +53,7 @@
                 return;
             }
              lkWeb.Confirm("确认生成", function () {
-                lkWeb.AjaxPost("@Url.Action("BuildColumn")", { id: id }, function () {
+                lkWeb.AjaxPost("/adm/tablelist/post_build_column/", { id: id }, function () {
                     parent.layer.alert("生成成功");
              })
             })
@@ -61,7 +61,7 @@
 
         var lkTable;
         function InitDataTable() {
-            var dataUrl = '@Url.Action("GetPageData")';
+            var dataUrl = '/adm/tablelist/get_page_data/';
             var columns = [
                 {
                     "sClass": "text-center",
@@ -71,15 +71,15 @@
                     },
                     "bSortable": false
                 },
-                { "mData": "rowNum", "sClass": "text-center" },
+                { "mData": "rownum", "sClass": "text-center" },
                 { "mData": "id", "sClass": "text-center" },
                 { "mData": "name", "sClass": "text-center" },
                 { "mData": "description", "sClass": "text-center" },
-                { "mData": "allowView", "sClass": "text-center" },
-                { "mData": "allowAdd", "sClass": "text-center" },
-                { "mData": "allowEdit", "sClass": "text-center" },
-                { "mData": "allowDelete", "sClass": "text-center" },
-                { "mData": "isView", "sClass": "text-center" }
+                { "mData": "allowview", "sClass": "text-center" },
+                { "mData": "allowadd", "sClass": "text-center" },
+                { "mData": "allowedit", "sClass": "text-center" },
+                { "mData": "allowdelete", "sClass": "text-center" },
+                { "mData": "isview", "sClass": "text-center" }
             ];
             lkTable = lkWeb.LoadTable("lkTable", columns, dataUrl)
         }
