--- a/kingWeb/kingWeb/templates/adm/table_column/add.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/add.html
@@ -15,12 +15,16 @@
 
 
 {% block content %}
-<form class="form-horizontal" action="@Url.Action("Add", new { id = 0 })" method="post" id="lkForm">
+<form class="form-horizontal" action="/adm/tablecolumn/post_add/" method="post" id="lkForm">
     {%csrf_token%}
     <div class="form-group">
         <label class="col-md-2 control-label">所属表</label>
         <div class="col-md-4">
-            @Html.DropDownList("TableID", (SelectList)ViewBag.TableList, new { @class = "form-control" })
+           <select name="TableId" class="form-control" >
+             {% for item in tablelist%}
+                <option value="{{item.id}}">{{item.name}}</option>
+             {% endfor %}
+            </select>
         </div>
         <label class="col-md-2 control-label">列名称</label>
         <div class="col-md-4">
@@ -40,7 +44,11 @@
         </div>
         <label class="col-md-2 control-label">数据类型</label>
         <div class="col-md-4">
-            @Html.DropDownList("DataType", (SelectList)ViewBag.DataTypeList, new { @class = "form-control" })
+           <select name="DataType" class="form-control">
+             {% for item in datatype%}
+                <option value="{{item.value}}">{{item.name}}</option>
+             {% endfor %}
+           </select>
         </div>
     </div>
     <div class="form-group">
