--- a/kingWeb/kingWeb/templates/adm/table_list/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/edit.html
@@ -15,20 +15,20 @@
 
 
 {% block content %}
-<form class="form-horizontal" action="@Url.Action("Edit");" method="post" id="lkForm">
-    @Html.HiddenFor(item => item.Id, new { @class = "form-control" })
+<form class="form-horizontal" action="/adm/tablelist/post_edit/" method="post" id="lkForm">
+   <input type="hidden" name="Id" value="{{id}}" />
     {%csrf_token%}
     <div class="form-group">
         <label class="col-md-2 control-label">表名</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="Name"
+            <input type="text" class="form-control" name="Name" value="{{name}}"
                    data-val="true" data-val-maxlength="表名长度不能超过50个字符" data-val-maxlength-max="50"
                    data-val-minlength="表名长度不能少于2个字符" data-val-minlength-min="2" data-val-required="表名不能为空" />
             <span class="field-validation-valid" data-valmsg-for="Name" data-valmsg-replace="true"></span>
         </div>
         <label class="col-md-2 control-label">表说明</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="Description"
+            <input type="text" class="form-control" name="Description" value="{{description}}"
                    data-val="true" data-val-maxlength="表说明长度不能超过50个字符" data-val-maxlength-max="50"
                    data-val-minlength="表说明长度不能少于2个字符" data-val-minlength-min="2" data-val-required="表说明不能为空" />
             <span class="field-validation-valid" data-valmsg-for="Description" data-valmsg-replace="true"></span>
@@ -37,49 +37,53 @@
     <div class="form-group">
         <label class="col-md-2 control-label">删除表名</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="DeleteTableName" data-toggle="tooltip" title="一般为此表名" />
+            <input type="text" class="form-control" name="DeleteTableName" value="{{deletetablename}}" data-toggle="tooltip" title="一般为此表名" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">查看是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="AllowView" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="AllowView" value="{{allowview}}" data-toggle="tooltip" title="1 or 0" />
         </div>
         <label class="col-md-2 control-label">添加是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="AllowAdd" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="AllowAdd" value="{{allowadd}}" data-toggle="tooltip" title="1 or 0" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">编辑是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="AllowEdit" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="AllowEdit" value="{{allowedit}}" data-toggle="tooltip" title="1 or 0" />
         </div>
         <label class="col-md-2 control-label">删除是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="AllowDelete" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="AllowDelete" value="{{allowdelete}}" data-toggle="tooltip" title="1 or 0" />
         </div>
     </div>
 
     <div class="form-group">
         <label class="col-md-2 control-label">导入是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="AllowImport" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="AllowImport" value="{{allowimport}}" data-toggle="tooltip" title="1 or 0" />
         </div>
         <label class="col-md-2 control-label">导出是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="AllowExport" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="AllowExport" value="{{allowexport}}" data-toggle="tooltip" title="1 or 0" />
         </div>
     </div>
 
     <div class="form-group">
         <label class="col-md-2 control-label">导入类型</label>
         <div class="col-md-4">
-            @Html.DropDownList("ImportType", (SelectList)ViewBag.ImportTypeList, new { @class = "form-control" })
+             <select name="ImportType" class="form-control">
+            {% for item in import_type_list%}
+                <option value="{{item.value}}" {%ifequal importtype item.value %}selected {%endifequal%}>{{item.name}}</option>
+             {% endfor %}
+           </select>
         </div>
         <label class="col-md-2 control-label">是否视图</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="IsView" data-val-maxlength="是否视图长度不能超过2个字符" data-val-maxlength-max="2"
+            <input type="text" class="form-control" name="IsView" value="{{isview}}" data-val-maxlength="是否视图长度不能超过2个字符" data-val-maxlength-max="2"
                    data-val="true" data-val-required="是否视图不能为空" data-toggle="tooltip" title="1 or 0" />
             <span class="field-validation-valid" data-valmsg-for="IsView" data-valmsg-replace="true"></span>
         </div>
@@ -87,33 +91,33 @@
     <div class="form-group">
         <label class="col-md-2 control-label">默认排序条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="DefaultSort" data-toggle="tooltip" title="例如:Id desc" />
+            <input type="text" class="form-control" name="DefaultSort" value="{{defaultsort}}" data-toggle="tooltip" title="例如:Id desc" />
         </div>
         <label class="col-md-2 control-label">禁止删除条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="ForbiddenDeleteFilter" data-toggle="tooltip" title="例如:Id > 1000" />
+            <input type="text" class="form-control" name="ForbiddenDeleteFilter" value="{{forbiddendeletefilter}}" data-toggle="tooltip" title="例如:Id > 1000" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">禁止更新条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="ForbiddenUpdateFilter" data-toggle="tooltip" title="例如: Id < 1000" />
+            <input type="text" class="form-control" name="ForbiddenUpdateFilter" value="{{forbiddenupdatefilter}}" data-toggle="tooltip" title="例如: Id < 1000" />
         </div>
         <label class="col-md-2 control-label">禁止添加条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="ForbiddenAddFilter" placeholder="未实现" />
+            <input type="text" class="form-control" name="ForbiddenAddFilter" value="{{forbiddenaddfilter}}" placeholder="未实现" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">默认过滤条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" asp-for="DefaultFilter" data-toggle="tooltip" title="例如: Id != 1000" />
+            <input type="text" class="form-control" name="DefaultFilter" value="{{defaultfilter}}" data-toggle="tooltip" title="例如: Id != 1000" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">扩展方法</label>
         <div class="col-md-7">
-            <textarea class="form-control" asp-for="ExtendFunction" rows="3" data-toggle="tooltip" title="{Id}为Id,{UserId}为UserId"></textarea>
+            <textarea class="form-control" name="ExtendFunction" rows="3" data-toggle="tooltip" title="{Id}为Id,{UserId}为UserId">{{extendfunction}}</textarea>
         </div>
     </div>
     <div class="form-group">
