--- a/kingWeb/kingWeb/templates/adm/table_column/index.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/index.html
@@ -61,7 +61,7 @@
                 { "mData": "tablename", "sClass": "text-center" },
                 { "mData": "name", "sClass": "text-center" },
                 { "mData": "description", "sClass": "text-center" },
-                { "mData": "datatypename", "sClass": "text-center" },
+                { "mData": "datatype", "sClass": "text-center" },
                 { "mData": "addvisible", "sClass": "text-center" },
                 { "mData": "editvisible", "sClass": "text-center" },
                 { "mData": "listvisible", "sClass": "text-center" },
@@ -90,6 +90,10 @@
         function SetValue(filedName) {
             var ids = lkWeb.GetCheckValueList($(".checkChild"));
             var value = $("#txtValue").val();
+            if (value != '1' && value != '0') {
+                alert('请输入1或0 代表是或否')
+                return
+            }
             lkWeb.Confirm("确认修改", function () {
                 lkWeb.AjaxPost("/adm/tablecolumn/setvalue/", { ids: ids, value: value, filedname: filedName }, function () {
                     parent.layer.alert("修改成功");
@@ -124,13 +128,13 @@
             批量设置属性
         </div>
         <div class="panel-body shadow-btn">
-            <button type="button" class="btn" onclick="ShowSetValue('Required')">是否必填</button>
-            <button type="button" class="btn" onclick="ShowSetValue('ImportVisible')">导入是否可见</button>
-            <button type="button" class="btn" onclick="ShowSetValue('ExportVisible')">导出是否可见</button>
-            <button type="button" class="btn" onclick="ShowSetValue('ViewVisible')">详情是否可见</button>
-            <button type="button" class="btn" onclick="ShowSetValue('AddVisible')">添加是否可见</button>
-            <button type="button" class="btn" onclick="ShowSetValue('EditVisible')">编辑是否可见</button>
-            <button type="button" class="btn" onclick="ShowSetValue('ListVisible')">列表是否可见</button>
+            <button type="button" class="btn" onclick="ShowSetValue('required')">是否必填</button>
+            <button type="button" class="btn" onclick="ShowSetValue('importvisible')">导入是否可见</button>
+            <button type="button" class="btn" onclick="ShowSetValue('exportvisible')">导出是否可见</button>
+            <button type="button" class="btn" onclick="ShowSetValue('viewvisible')">详情是否可见</button>
+            <button type="button" class="btn" onclick="ShowSetValue('addvisible')">添加是否可见</button>
+            <button type="button" class="btn" onclick="ShowSetValue('editvisible')">编辑是否可见</button>
+            <button type="button" class="btn" onclick="ShowSetValue('listvisible')">列表是否可见</button>
         </div>
     </div>
 </div>
