--- a/kingWeb/kingWeb/templates/adm/table_column/add.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/add.html
@@ -44,11 +44,10 @@
         </div>
         <label class="col-md-2 control-label">数据类型</label>
         <div class="col-md-4">
-           <select name="DataType" class="form-control">
-             {% for item in datatype%}
-                <option value="{{item.value}}">{{item.name}}</option>
-             {% endfor %}
-           </select>
+            <input type="text" class="form-control" name="DataType"
+                   data-val="true" data-val-maxlength="数据类型长度不能超过50个字符" data-val-maxlength-max="12"
+                   data-val-required="数据类型不能为空" />
+            <span class="field-validation-valid" data-valmsg-for="DataType" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
