--- a/kingWeb/kingWeb/templates/adm/shared/layout_content.html
+++ b/kingWeb/kingWeb/templates/adm/shared/layout_content.html
@@ -40,10 +40,10 @@
 <body>
     <div class="ibox">
         <div class="ibox-title">
-            <h5>{%block title%} title  {% endblock%}</h5>
+            <h5>{%block title%}   {% endblock%}</h5>
         </div>
         <div class="ibox-content">
-            {%block content%} content  {% endblock%}
+            {%block content%}  {% endblock%}
         </div>
     </div>
     {%block scripts%}    {% endblock%}
