--- a/kingWeb/kingWeb/templates/adm/user/department.html
+++ b/kingWeb/kingWeb/templates/adm/user/department.html
@@ -49,7 +49,7 @@
                 type: "post",
                 url:"/adm/department/get_list/",
                 dataType: "json",
-                data: { csrfmiddlewaretoken: $("input[name='csrfmiddlewaretoken']").val()},
+                data: { csrfmiddlewaretoken: lkWeb.GetCsrfToken()},
                 async: false,
                 success: function (data) {
                     zNodes_department = data;
@@ -97,7 +97,7 @@
                         data: {
                             UserIDs: ids,
                            DepartmentId: departmentId,
-                            csrfmiddlewaretoken: $("input[name='csrfmiddlewaretoken']").val()
+                            csrfmiddlewaretoken: lkWeb.GetCsrfToken()
                         },
                         success: function (result) {
                             if (result.flag == true) {
