--- a/kingWeb/kingWeb/templates/adm/viewlist/edit.html
+++ b/kingWeb/kingWeb/templates/adm/viewlist/edit.html
@@ -1,12 +1,7 @@
-﻿@using lkWeb.Areas.Admin.Models
-@using System.Text;
-@using System.Text.Encodings.Web;
-@{
-    Layout = "~/Areas/Admin/Views/Shared/_Layout_Content.cshtml";
-    ViewBag.Title = "编辑数据";
-}
-@model ViewListModel
-@section Scripts{
+﻿{% extends "adm/shared/layout_content.html" %}
+{%block title%}{{title}}{% endblock%}
+
+{% block scripts %}
     <script type="text/javascript">
         $(function () {
             lkWeb.FormValidation($("#lkForm"), function () {
@@ -15,7 +10,11 @@
         })
 
     </script>
-}
+{% endblock %}
+
+
+{% block content %}
+
 <form class="form-horizontal" action="@Url.Action("Edit")" method="post" id="lkForm">
     {%csrf_token%}
     @{
@@ -66,3 +65,4 @@
         </div>
     </div>
 </form>
+{% endblock %}
