--- a/kingWeb/kingWeb/templates/adm/viewlist/index.html
+++ b/kingWeb/kingWeb/templates/adm/viewlist/index.html
@@ -1,17 +1,11 @@
-﻿@using lkWeb.Areas.Admin.Models
-@using System.Text;
-@using lkWeb.Core.Extensions;
+﻿{% extends "adm/shared/layout_content.html" %}
+{%block title%}{{title}}{% endblock%}
 
-@{
-    Layout = "~/Areas/Admin/Views/Shared/_Layout_Content.cshtml";
-    ViewBag.Title = ViewBag.TableName;
-}
-@model ViewListModel
-@section Scripts{
-    <script>
+{% block scripts %}
+<script>
+        tableid  = '{{tableid}}'
         $(function () {
             InitDataTable();
-
             $(".checkAll").click(function () {
                 var check = $(this).prop("checked");
                 $(".checkChild").prop("checked", check);
@@ -30,12 +24,12 @@
                 }
                 var formFile = new FormData();
                 formFile.append("excelFile", fileObj); //加入文件对象
-                formFile.append("id", @Model.Table.Id);
+                formFile.append("id", tableid);
                 var token = lkWeb.GetCsrfToken();
                 formFile.append("csrfmiddlewaretoken", token);
                 var data = formFile;
                 $.ajax({
-                    url: "@Url.Action("Import")",
+                    url: "/adm/viewlist/post_import/",
                     data: data,
                     type: "Post",
                     dataType: "json",
@@ -65,25 +59,25 @@
         });
 
         function AddModel() {
-            lkWeb.GoAction("adm","viewlist", "add","@Model.Table.Id");
+            lkWeb.GoAction("adm","viewlist", "add","tableid");
         }
         function EditModel() {
             var id = lkWeb.GetCheckValue($(".checkChild"));
             if (id == "")
                 parent.layer.alert("请选择");
             else
-                lkWeb.GoAction("adm","viewlist", "edit", id+"/" + "@Model.Table.Id");
+                lkWeb.GoAction("adm","viewlist", "edit", id+"/" + "tableid");
         }
         function Detail() {
                   var id = lkWeb.GetCheckValue($(".checkChild"));
             if (id == "")
                 parent.layer.alert("请选择");
             else
-                lkWeb.GoAction("adm","viewlist", "detail", id+"/" + "@Model.Table.Id",true,"查看详情","80%","80%");
+                lkWeb.GoAction("adm","viewlist", "detail", id+"/" + "tableid",true,"查看详情","80%","80%");
         }
         function DelModel() {
             var ids = lkWeb.GetCheckValueList($(".checkChild"));
-            lkWeb.DeleteMulti("adm",ids, "viewlist", lkTable,"@Model.Table.Id");
+            lkWeb.DeleteMulti("adm",ids, "viewlist", lkTable,"tableid");
         }
 
         function Import() {
@@ -92,10 +86,10 @@
 
         function DownloadTemplate() {
              $.ajax({
-                          url: "@Url.Action("DownloadImportTemplate")",
+                          url: "/adm/viewlist/download_import_template",
                           type: "post",
                           dataType: "json",
-                          data: { param: {id:@Model.Table.Id}, csrfmiddlewaretoken: lkWeb.GetCsrfToken()},
+                          data: { param: {id:tableid}, csrfmiddlewaretoken: lkWeb.GetCsrfToken()},
                           async: false,
                           success: function (data) {
                               if (data.flag == true)
@@ -116,10 +110,10 @@
 
         function Export() {
                  $.ajax({
-                          url: "@Url.Action("Export")",
+                          url: "/adm/viewlist/export/",
                           type: "post",
                           dataType: "json",
-                          data: { param: {id:@Model.Table.Id}, csrfmiddlewaretoken: lkWeb.GetCsrfToken()},
+                          data: { param: {id:tableid}, csrfmiddlewaretoken: lkWeb.GetCsrfToken()},
                           async: false,
                           success: function (data) {
                               if (data.flag == true)
@@ -140,7 +134,7 @@
 
         var lkTable;
         function InitDataTable() {
-            var dataUrl = '@Url.Action("GetPageData")';
+            var dataUrl = '/adm/viewlist/get_page_data/';
             var columns = [
                 {
                     "sClass": "text-center",
@@ -150,70 +144,59 @@
                     },
                     "bSortable": false
                 },
-                { "mData": "rowNum", "sClass": "text-center" },
-                @{
-                    StringBuilder columnStr = new StringBuilder();
-                    string str = "{{\"mData\": \"{0}\", \"sClass\": \"text-center\"}},";
-                    string hiddenStr = "{{\"mData\": \"{0}\",\"visible\": false, \"sClass\": \"text-center\"}},";
-                    foreach (var column in Model.TableColumn)
-                    {
-                        if (column.Name == "Id")  //隐藏Id列
-                        {
-                            columnStr.Append(string.Format(hiddenStr, column.Name));
-                        }
-                        else
-                        {
-                            columnStr.Append(string.Format(str, column.Name));
-                        }
-                    }
-                     @Html.Raw(columnStr.ToString());
-                     }
-            @{
-                if (Model.Table.ExtendFunction.IsNotEmpty())
-                {
-                       @Html.Raw("{\"mData\":\"ExtendFunction\", \"sClass\": \"text-center\" },".ToString())
-                }
-            }
+                { "mData": "rownum", "sClass": "text-center" },
+                 {% load set_val %}
+               {% set str = "{{'mData': '{0}', 'sClass': 'text-center'}}," %}
+               {% set hiddenstr = "{{'mData': '{0}','visible': false, 'sClass': 'text-center'}},"%}
+                  {% for col in tablecolumns%}
+                        {% ifequal col.Name "Id" %}
+                          {'mData': '{{col.name}}','visible': false, 'sClass': 'text-center'},
+                        {% else %}
+                           {'mData': '"{{col.name}}', 'sClass': 'text-center'},
+                        {% endifequal %}
+                    {% endfor %}
+               {% ifnotequal table.extendfunction '' %}
+                      {"mData":"extendFunction", "sClass": "text-center" },
+              {% endifnotequal %}
             ];
-            lkTable = lkWeb.LoadTable("lkTable", columns, dataUrl, '@Model.Table.Id')
-
+           lkTable = lkWeb.LoadTable("lkTable", columns, dataUrl, tableid)
         }
-    </script>
-}
+</script>
+{% endblock %}
+
+
+{% block content %}
 
 <div class="form-group">
-    @{
-        ShowButtonModel btnModel = ViewBag.ShowButton;
-        if (btnModel.ShowAddBtn)
-        {
-            <button type="button" class="btn btn-success" onclick="Detail()">查看详情</button>
-        }
-        if (btnModel.ShowAddBtn)
-        {
-            <button type="button" class="btn btn-success" onclick="AddModel()">添加</button>
-        }
-        if (btnModel.ShowEditBtn)
-        {
-            <button type="button" class="btn btn-info" onclick="EditModel()">编辑</button>
-        }
-        if (btnModel.ShowDelBtn)
-        {
-            <button type="button" class="btn btn-danger" onclick="DelModel()">删除</button>
-        }
-        if (btnModel.ShowImportBtn)
-        {
-            <button type="button" class="btn btn-primary" onclick="Import()">导入</button>
-        }
-        if (btnModel.ShowExportBtn)
-        {
-            <button type="button" class="btn btn-warning" onclick="Export()">导出</button>
-        }
-        if (btnModel.ShowImportBtn)
-        {
-            <button type="button" class="btn btn-primary" onclick="DownloadTemplate()">下载导入模板</button>
-        }
 
-    }
+        {% if table.allowview == 1 %}
+            <button type="button" class="btn btn-success" onclick="Detail()">查看详情</button>
+        {% endif %}
+
+        {% if table..allowadd == 1 %}
+            <button type="button" class="btn btn-success" onclick="AddModel()">添加</button>
+        {% endif %}
+
+        {% if table.allowedit == 1 %}
+            <button type="button" class="btn btn-info" onclick="EditModel()">编辑</button>
+        {% endif %}
+
+        {% if table.allowdelete == 1 %}
+            <button type="button" class="btn btn-danger" onclick="DelModel()">删除</button>
+        {% endif %}
+
+        {% if table.allowimport == 1 %}
+            <button type="button" class="btn btn-primary" onclick="Import()">导入</button>
+        {% endif %}
+
+        {% if table.allowexport == 1 %}
+            <button type="button" class="btn btn-warning" onclick="Export()">导出</button>
+        {% endif %}
+
+        {% if table.allowimport == 1 %}
+            <button type="button" class="btn btn-primary" onclick="DownloadTemplate()">下载导入模板</button>
+        {% endif %}
+
 </div>
 <div class="hidden">
     <input type="file" name="excelfile" id="excelFile" />
@@ -234,19 +217,14 @@
                 <input type="checkbox" class="checkAll" />
             </th>
             <th>序号</th>
-            @{
-                StringBuilder headerStr = new StringBuilder();
-                foreach (var column in Model.TableColumn)
-                {
-                    headerStr.Append("<th>" + column.Description + "</th>");
-                }
-                if (Model.Table.ExtendFunction.IsNotEmpty())
-                {
-                    headerStr.Append("<th>操作</th>");
-                }
-                @Html.Raw(headerStr.ToString());
-            }
+            {% for col in tablecolumns%}
+            <th>{{col.description}} </th>
+            {% endfor %}
+            {% ifnotequal table.extendfunction '' %}
+            <th>操作</th>
+            {%endifnotequal%}
         </tr>
     </thead>
     <tbody></tbody>
 </table>
+{% endblock %}
